fix: logo alignment

--- a/website/components/io-usecase-customer/style.module.css
+++ b/website/components/io-usecase-customer/style.module.css
@@ -48,6 +48,7 @@
 }
 
 .eyebrowLogo {
+  display: flex;
   max-width: 120px;
 }
 
